# wall_of_thanks

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  comment.ts  docker-compose.yml  index.html  index.ts  style.css  tsconfig.json
.github/workflows/: publish_backend.yml  publish_frontend.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs
ts/: add_comment.ts  app.ts  backend.ts  column_item.ts  comment.ts  index.ts  letterbox.ts  types.ts  utils.ts
