[package]
name = "wall_not_found"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2.5"
regex = "1.10.4"
rusqlite = "0.31.0"
